# video-dubbing

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  TODO.md  pyproject.toml
docs/: subtitle_style_en.md  subtitle_style_zh.md
scripts/: Add-Audio.ps1  Extract-Audio.ps1  biliup.sh  process_files.sh
src/video_dubbing/: args.py  asr.py  ass.py  cli.py  executor.py  ffmpeg.py  hf_argparser.py  llm.py  log.py  split.py  srt.py  translate.py  tts.py  types.py  utils.py  wrapper.py
tests/: test_ass.py  test_srt.py  test_translate.py  test_tts.py  test_utils.py
